04-monitoring/01-monitoring-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintech-monitoring
  labels:
    tier: monitoring
