04-monitoring/13-loki-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: fintech-monitoring
spec:
  serviceName: "loki"
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:

      containers:
      - name: loki
        image: grafana/loki:3.1.1
        args:
          - "-config.file=/etc/loki/loki.yaml"
        ports:
          - containerPort: 3100
            name: http
        securityContext:
          runAsUser: 10001
          runAsGroup: 10001
          runAsNonRoot: true
        resources:
          limits: { memory: 1Gi, cpu: "1" }
          requests: { memory: 512Mi, cpu: "500m" }
        volumeMounts:
        - name: config
          mountPath: /etc/loki
        - name: storage
          mountPath: /loki
      
      volumes:
      - name: config
        configMap:
          name: loki-config
      - name: storage
        persistentVolumeClaim:
          claimName: loki-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: fintech-monitoring
spec:
  type: NodePort
  selector:
    app: loki
  ports:
    - port: 3100
      targetPort: 3100
      nodePort: 31100
